e2e-tests/tests/snapshots/postgres__configured_function_with_token_0_0_0.snap
---
source: e2e-tests/tests/postgres.rs
expression: "tile_dump(&martin, \"/function_zxy_query_test/0/0/0?token=martin\").await"
---
layer: 0
  name: public.function_zxy_query_test
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(2048,2048)
    properties: (none)
  feature: 1
    id: (none)
    geometry: POINT(2025,2025)
    properties: (none)
  feature: 2
    id: (none)
    geometry: LINESTRING[count=2](2048 2048,2059 2037)
    properties: (none)
  feature: 3
    id: (none)
    geometry: LINESTRING[count=2](2071 2025,2082 2014)
    properties: (none)
  feature: 4
    id: (none)
    geometry: POINT(2389,1934)
    properties: (none)
  feature: 5
    id: (none)
    geometry: LINESTRING[count=3](2389 1934,2162 1690,2503 1551)
    properties: (none)
  feature: 6
    id: (none)
    geometry: RING[count=5](2162 1816,2276 1551,2503 1551,2389 1934,2162 1816)[OUTER]
    properties: (none)
  feature: 7
    id: (none)
    geometry:
      RING[count=5](2560 1473,2446 1934,2162 1816,2219 1551,2560 1473)[OUTER]
      RING[count=4](2446 1622,2276 1690,2389 1816,2446 1622)[INNER]
    properties: (none)
  feature: 8
    id: (none)
    geometry:
      POINT(2162,1551)
      POINT(2276,1816)
      POINT(2389,1934)
      POINT(2503,1690)
    properties: (none)
  feature: 9
    id: (none)
    geometry:
      POINT(2162,1551)
      POINT(2276,1816)
      POINT(2389,1934)
      POINT(2503,1690)
    properties: (none)
  feature: 10
    id: (none)
    geometry:
      LINESTRING[count=3](2162 1934,2276 1816,2162 1551)
      LINESTRING[count=4](2503 1551,2389 1690,2503 1816,2389 1934)
    properties: (none)
  feature: 11
    id: (none)
    geometry:
      RING[count=5](2162 1816,2503 1934,2219 1991,2105 1934,2162 1816)[OUTER]
      RING[count=4](2389 1816,2162 1551,2560 1551,2389 1816)[OUTER]
    properties: (none)
  feature: 12
    id: (none)
    geometry:
      RING[count=6](2276 1622,2560 1816,2389 1991,2162 1934,2162 1690,2276 1622)[OUTER]
      RING[count=4](2276 1754,2276 1875,2389 1816,2276 1754)[INNER]
      RING[count=4](2276 1473,2503 1551,2560 1690,2276 1473)[OUTER]
    properties: (none)
  feature: 13
    id: (none)
    geometry: LINESTRING[count=2](2094 1980,2128 1934)
    properties: (none)
  feature: 14
    id: (none)
    geometry: LINESTRING[count=39](2059 1991,2059 1997,2060 1998,2060 2002,2061 2004,2061 2005,2062 2007,2062 2009,2063 2011,2064 2012,2065 2014,2066 2015,2067 2017,2073 2023,2075 2024,2076 2025,2080 2027,2081 2028,2083 2029,2085 2029,2086 2030,2090 2030,2092 2031,2103 2031,2104 2030,2106 2030,2108 2029,2110 2029,2111 2028,2115 2026,2116 2025,2118 2024,2120 2022,2122 2021,2123 2020,2124 2018,2126 2017,2127 2015,2128 2014)
    properties: (none)
  feature: 15
    id: (none)
    geometry: LINESTRING[count=31](2048 2048,2047 2047,2047 2046,2046 2046,2046 2039,2047 2039,2047 2037,2048 2037,2048 2036,2049 2036,2050 2035,2052 2035,2052 2034,2055 2034,2056 2035,2058 2035,2058 2036,2059 2036,2059 2037,2060 2037,2060 2038,2061 2038,2061 2040,2062 2041,2062 2044,2061 2044,2061 2046,2060 2047,2060 2048,2059 2048,2048 2037)
    properties: (none)
  feature: 16
    id: (none)
    geometry:
      RING[count=80](2044 2026,2045 2025,2051 2025,2052 2026,2055 2026,2056 2027,2058 2027,2059 2028,2060 2028,2068 2036,2068 2037,2069 2038,2069 2040,2070 2041,2070 2044,2071 2045,2071 2050,2070 2051,2070 2053,2069 2053,2069 2055,2068 2055,2068 2056,2067 2056,2067 2057,2066 2057,2065 2058,2064 2058,2064 2059,2055 2059,2055 2058,2054 2058,2053 2057,2052 2057,2052 2056,2051 2056,2051 2055,2050 2055,2050 2054,2049 2053,2049 2052,2048 2051,2047 2052,2047 2053,2046 2054,2046 2055,2045 2055,2045 2056,2044 2056,2044 2057,2043 2057,2042 2058,2041 2058,2041 2059,2032 2059,2032 2058,2031 2058,2030 2057,2029 2057,2029 2056,2028 2056,2028 2055,2027 2055,2027 2053,2026 2053,2026 2051,2025 2050,2025 2045,2026 2044,2026 2041,2027 2040,2027 2038,2028 2037,2028 2036,2036 2028,2037 2028,2038 2027,2040 2027,2041 2026,2044 2026)[OUTER]
      RING[count=5](2048 2037,2037 2048,2048 2042,2059 2048,2048 2037)[INNER]
    properties: (none)
  feature: 17
    id: (none)
    geometry:
      LINESTRING[count=4](2105 1991,2082 1991,2082 2014,2048 2014)
      LINESTRING[count=22](2048 2048,2050 2048,2051 2049,2057 2049,2058 2048,2060 2048,2061 2047,2063 2047,2063 2046,2064 2046,2068 2042,2068 2041,2069 2041,2069 2040,2070 2039,2070 2037,2071 2037,2071 2034,2072 2033,2072 2029,2071 2028,2071 2025)
    properties: (none)
  feature: 18
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 19
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 20
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 21
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 22
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 23
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 24
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 25
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 26
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
  feature: 27
    id: (none)
    geometry: POINT(3673,1911)
    properties: (none)
