e2e-tests/tests/snapshots/postgres__curves_0_0_0.snap
---
source: e2e-tests/tests/postgres.rs
expression: "tile_dump(&martin, \"/curves/0/0/0\").await"
---
layer: 0
  name: curves
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: RING[count=79](2064 1994,2066 1993,2075 1993,2077 1994,2080 1994,2082 1995,2083 1995,2085 1996,2087 1998,2089 1998,2092 2001,2094 2002,2095 2004,2098 2007,2098 2009,2100 2011,2100 2013,2101 2014,2102 2016,2102 2019,2103 2021,2103 2030,2102 2032,2102 2035,2101 2036,2100 2038,2100 2039,2099 2040,2098 2042,2098 2043,2097 2044,2096 2046,2094 2048,2092 2049,2089 2052,2087 2053,2086 2054,2085 2054,2083 2055,2082 2056,2079 2056,2077 2057,2064 2057,2063 2056,2060 2056,2058 2055,2057 2054,2056 2054,2054 2053,2052 2051,2050 2050,2046 2046,2045 2044,2043 2042,2042 2040,2042 2039,2041 2038,2040 2036,2040 2033,2039 2032,2039 2019,2040 2017,2040 2014,2041 2013,2042 2011,2042 2010,2043 2009,2044 2007,2047 2004,2048 2002,2050 2000,2052 1999,2053 1998,2054 1998,2056 1997,2058 1995,2060 1995,2061 1994,2064 1994)[OUTER]
    properties:
      gid = 1 (uint)
  feature: 1
    id: (none)
    geometry: RING[count=87](2181 1878,2183 1877,2186 1877,2188 1878,2192 1878,2194 1879,2195 1879,2197 1880,2198 1881,2200 1881,2202 1883,2204 1884,2208 1888,2209 1890,2212 1893,2213 1895,2214 1896,2214 1898,2215 1899,2215 1901,2216 1902,2216 1906,2217 1907,2217 1914,2216 1915,2216 1918,2215 1920,2215 1922,2214 1923,2214 1924,2213 1926,2212 1927,2211 1929,2208 1932,2207 1934,2204 1937,2202 1938,2201 1939,2200 1939,2198 1940,2197 1941,2195 1941,2194 1942,2192 1942,2191 1943,2178 1943,2177 1942,2175 1942,2174 1941,2172 1941,2171 1940,2169 1939,2168 1939,2167 1938,2165 1937,2162 1934,2161 1932,2158 1929,2157 1927,2156 1926,2155 1924,2155 1923,2154 1922,2154 1920,2153 1918,2153 1914,2152 1912,2152 1909,2153 1907,2153 1902,2154 1901,2154 1899,2155 1898,2155 1896,2156 1895,2157 1893,2160 1890,2161 1888,2165 1884,2167 1883,2169 1881,2171 1881,2172 1880,2174 1879,2175 1879,2177 1878,2181 1878)[OUTER]
    properties:
      gid = 2 (uint)
