e2e-tests/tests/snapshots/postgres__curves_untyped_0_0_0.snap
---
source: e2e-tests/tests/postgres.rs
expression: "tile_dump(&martin, \"/curves_untyped/0/0/0\").await"
---
layer: 0
  name: curves_untyped
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: LINESTRING[count=28](2048 2048,2048 2045,2049 2044,2049 2043,2050 2042,2050 2041,2051 2041,2051 2040,2052 2040,2052 2039,2053 2039,2054 2038,2055 2038,2055 2037,2064 2037,2064 2038,2065 2038,2066 2039,2067 2039,2067 2040,2068 2040,2068 2041,2069 2041,2069 2043,2070 2043,2070 2045,2071 2046,2071 2048)
    properties:
      gid = 1 (uint)
  feature: 1
    id: (none)
    geometry: LINESTRING[count=31](2048 2048,2047 2047,2047 2046,2046 2046,2046 2039,2047 2039,2047 2037,2048 2037,2048 2036,2049 2036,2050 2035,2052 2035,2052 2034,2055 2034,2056 2035,2058 2035,2058 2036,2059 2036,2059 2037,2060 2037,2060 2038,2061 2038,2061 2040,2062 2041,2062 2044,2061 2044,2061 2046,2060 2047,2060 2048,2059 2048,2048 2037)
    properties:
      gid = 2 (uint)
