e2e-tests/tests/snapshots/postgres__floor_plan_1_0_0.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: floor_plan
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(983,983)
    properties:
      room = "Lobby"
