e2e-tests/tests/snapshots/postgres__function_Mixed_Name_6_57_29.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: MixedCase.function_Mixed_Name
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(1614,3539)
    properties:
      Gid = 1 (uint)
  feature: 1
    id: (none)
    geometry: POINT(1613,3539)
    properties:
      Gid = 3 (uint)
  feature: 2
    id: (none)
    geometry: POINT(1614,3540)
    properties:
      Gid = 2 (uint)
